--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PersonProfileActivity"></activity>
+        <activity android:name=".MyPostActivity"></activity>
+        <activity android:name=".PersonProfileActivity" />
         <activity
             android:name=".ResetPasswordActivity"
             android:parentActivityName=".MainActivity" />
