--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,8 @@
         <activity
         android:name=".ChatActivity"
         android:parentActivityName=".MainActivity"/>
-        <activity android:name=".MyPostActivity"></activity>
+        <activity android:name=".MyPostActivity"
+            android:parentActivityName=".MainActivity"></activity>
 
     </application>
 
